--- a/roll_dice/android/app/src/main/AndroidManifest.xml
+++ b/roll_dice/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.first_app">
+    package="com.example.roll_dice">
    <application
-        android:label="first_app"
+        android:label="랜덤 주사위"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
