--- a/roll_dice/pubspec.yaml
+++ b/roll_dice/pubspec.yaml
@@ -60,6 +60,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - android/app/src/main/res/drawable/icon.png
+    - android/app/src/main/res/mipmap-hdpi/icon.png
     - assets/images/dice-1.png
     - assets/images/dice-2.png
     - assets/images/dice-3.png
